Summary of important user-visible changes for instrument-control 0.4.0+
-------------------------------------------------------------------
 
  ** SERIALPORT: added new serialport object and functions

  ** SERIAL: use extended win32 serial name for comports so > 10 work.

     New serial functions:
        serialbreak

     Added overload functions for: 
        fprintf
        fread
        fwrite

     Added properties:
        port

     Added .property access

  ** UDP: add .property access to the object

     Added properties:
        localhost

     Updates property timeout to be seconds

     Updated udp constructor to be closer to matlab compatible

  ** TCP: add .property access to the object

  ** I2C: 
     Implement object properties 

     Added overload functions for: 
        fread
        fwrite
        get
        set

  ** PARALLEL:
     Added overload functions for: 
        fclose
        fopen
        fread
        fwrite

  ** USBTMC:
     Added overload functions for: 
        fread
        fwrite

  ** VXI11:
     Added overload functions for: 
        fread
        fwrite

  ** insthwinfo: updated to show i2c ports
 
  ** added toolkit manual

Summary of important user-visible changes for instrument-control 0.4.0
-------------------------------------------------------------------

  ** SERIAL: added 'status', 'bytesavailable', 'name' and 'type'
     properties, and the following functions:
        seriallist
        flushinput
        flushoutput

  ** UDP: added 'status' and 'bytesavailable' properties and the
     following functions:
        flushinput
        flushoutput

  ** TCP: added properties to object, added overridden functions:
        get
        set
        fprintf
        fread
        fwrite
        flushinput
        flushoutput

  ** tcpip(): added wrapper to be matlab compatible(ish)

  ** distribute rpc generated files

  ** verify -M option will work on rpcgen
